[package]
name = "natrium"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/natrium"
documentation = "https://docs.rs/natrium"
description = "Cryptography lib"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"

[dependencies]
byteorder = "1.2.3"

[dev-dependencies]
